[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-clock-mcp"
version = "1.0.0"
description = "World Clock MCP Server for timezone operations"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "pylint>=2.15.0"
]

[project.scripts]
world-clock-mcp = "world_clock_mcp.server:main"
